# FPA-Rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
bindings/: Cargo.toml
bindings/binding-node/: .gitignore  Cargo.toml  build.mjs  package.json
bindings/binding-node/.github/workflows/: CI.yml
bindings/binding-node/npm/darwin-arm64/: package.json
bindings/binding-node/npm/darwin-x64/: package.json
bindings/binding-node/npm/linux-x64-gnu/: package.json
bindings/binding-node/src/: lib.rs
crates/flashpoint-archive/: Cargo.toml  README.md
crates/flashpoint-archive-service/: Cargo.toml  README.md  config.json.example  index.html
crates/flashpoint-archive-service/client/: esbuild.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
crates/flashpoint-archive-service/client/src/: App.tsx  index.tsx  markdownComponents.tsx  styles.css  util.ts
crates/flashpoint-archive-service/client/src/components/: Dropdown.tsx  ErrorBoundary.tsx  Header.tsx  Markdown.tsx  RowEditors.tsx  StripedTable.tsx  WikiGame.tsx
crates/flashpoint-archive-service/client/src/pages/: EditGamePage.tsx  GamePage.tsx  PlatformPage.tsx  TagPage.tsx
crates/flashpoint-archive-service/src/: auth.rs  config.rs  error.rs  game.rs  main.rs
crates/flashpoint-archive-service/src/routes/: game.rs  mod.rs  platform.rs  tag.rs
crates/flashpoint-archive-service/static/: bundle.js  styles.css
crates/flashpoint-archive/benches/: 15_search.txt  1k_rand.txt  db_bench.rs  flashpoint.sqlite  tags_blacklist.txt
crates/flashpoint-archive/src/: error.rs  lib.rs  logger.rs
crates/flashpoint-archive/src/game/: ext.rs  mod.rs  search.rs
crates/flashpoint-archive/src/game_data/: mod.rs
crates/flashpoint-archive/src/migration/: mod.rs
crates/flashpoint-archive/src/platform/: mod.rs
crates/flashpoint-archive/src/tag/: mod.rs
crates/flashpoint-archive/src/tag_category/: mod.rs
crates/flashpoint-archive/src/update/: mod.rs
crates/flashpoint-archive/src/util/: mod.rs
crates/flashpoint-content-downloader/: Cargo.toml  README.md
crates/flashpoint-content-downloader/src/: main.rs
crates/flashpoint-database-builder/: Cargo.toml  README.md
crates/flashpoint-database-builder/src/: main.rs
crates/flashpoint-json-export/: Cargo.toml  README.md
crates/flashpoint-json-export/src/: main.rs
