[package]
name = "flashpoint-archive-service"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Service to expose Flashpoint Database as an API, complete with metaediting"
homepage = "https://flashpointarchive.org/"
repository = "https://github.com/FlashpointProject/FPA-Rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.122"
axum = "0.7.5"
tokio = { version = "1.0", features = ["full"] }
flashpoint-archive = { path = "../flashpoint-archive", features = ["serde"] }