[package]
name = "flashpoint-archive-service"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Service to expose Flashpoint Database as an API, complete with metaediting"
homepage = "https://flashpointarchive.org/"
repository = "https://github.com/FlashpointProject/FPA-Rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
flashpoint-archive = { path = "../flashpoint-archive", features = ["serde"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tray-icon = "0.14.3"
oauth2 = "4.4.2"
rusqlite = { version = "0.30.0", features = ["chrono", "bundled"] }
r2d2_sqlite = "0.23.0"
r2d2 = "0.8"
chrono = "0.4.31"
uuid = "1.10"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
once_cell = "1.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"