[package]
name = "flashpoint-archive"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["webgames", "archive", "flashpoint"]
exclude = ["benches/"]
readme = "README.md"
description = "Library to access Flashpoint Archive's database and misc related functions"
homepage = "https://flashpointarchive.org/"
repository = "https://github.com/FlashpointArchive/FPA-Rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
rusqlite = { version = "0.30.0", features = ["chrono", "array", "bundled"] }
snafu = "0.8.0"
rusqlite_migration = "1.1.0"
uuid = { version = "1.6.1", features = ["v4"] }

[dev_dependencies]
criterion = "0.5.1"

[[bench]]
name = "db_bench"
path = "benches/db_bench.rs"
harness = false
