[package]
name = "flashpoint-archive"
version = "0.6.2"
edition = "2021"
license = "MIT"
keywords = ["webgames", "archive", "flashpoint"]
exclude = ["benches/"]
readme = "README.md"
description = "Library to access Flashpoint Archive's database and misc related functions"
homepage = "https://flashpointarchive.org/"
repository = "https://github.com/FlashpointProject/FPA-Rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
rusqlite = { version = "0.30.0", features = ["chrono", "array", "bundled"] }
snafu = "0.8.0"
rusqlite_migration = "1.1.0"
uuid = { version = "1.6.1", features = ["v4"] }
r2d2_sqlite = "0.23.0"
r2d2 = "0.8"
tokio = { version = "1", features = ["full"] }
napi = { version = "2", features = ["chrono_date"], optional = true }
napi-derive = { version = "2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
fs_extra = "1.3.0"

[dev_dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[features]
napi = ["dep:napi-derive", "dep:napi"]
serde = ["dep:serde"]

[[bench]]
name = "db_bench"
path = "benches/db_bench.rs"
harness = false
