[package]
name = "flashpoint-content-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
flashpoint-archive = { path = "../flashpoint-archive" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version ="1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
