[package]
name = "flashpoint-json-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
flashpoint-archive = { path = "../flashpoint-archive" }
serde = { version ="1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
